# dockerPythonProjectBase

./: .env  Makefile  README.md  docker-compose.yaml  ipython_config.py  main.py  pyproject.toml
.github/workflows/: linters.yml
docker/src/: Dockerfile
