[tool.poetry]
name = "example-project"
version = "0.0.1"
description = "This is a template Python project"
authors = ["Jorge Gómez <jorge.gomzar@gmail.com>"]
readme = "README.md"
packages = [{include = "example_project"}]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.2"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ruff = "^0.0.257"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120
disable = []
good-names = []